# secure-ml-inference

./: .dockerignore  .env.example  .gitignore  AI_CONTEXT.md  Dockerfile  LICENSE  README.md  STRUCTURE.md  amvera.yml  docker-compose.yml  pyproject.toml  requirements-all.txt  requirements-docker.txt  requirements.txt  run_experiments.bat  run_experiments.sh
api/: __init__.py  main.py
app/: __init__.py  client.py  config.py  crypto.py  data.py  encoding.py  inference.py  linear_scorer.py  metrics.py  model.py  paillier_reference.py  schemas.py  server.py
deploy/: start.sh
docs/: architecture.md  dataset.md  experiment_protocol.md  paillier_algorithm.md  threat_model.md
experiments/: 00_environment_info.py  01_train_baseline.py  02_validate_manual_inference.py  03_run_encoded_inference.py  04_run_phe_inference.py  05_benchmark_latency.py  06_benchmark_payload.py  07_benchmark_feature_scaling.py  08_benchmark_datasets.py  09_benchmark_key_lengths.py  10_benchmark_scale.py  11_benchmark_api_roundtrip.py  12_train_regression_baseline.py  13_run_phe_regression.py  __init__.py  generate_schemes.py
results/models/: metadata.json  model.pkl  regression_metadata.json  regression_model.pkl  regression_weights.json  weights.json
results/tables/: api_roundtrip_metrics.csv  dataset_benchmark_metrics.csv  environment.json  feature_scaling_metrics.csv  key_length_metrics.csv  latency_metrics.csv  payload_metrics.csv  quality_metrics.csv  regression_quality_metrics.csv  scale_metrics.csv
tests/: __init__.py  test_api.py  test_client_server.py  test_crypto.py  test_encoding.py  test_inference.py  test_paillier_reference.py  test_protocol_trace.py  test_streamlit_app.py  test_ui_metrics.py  test_ui_static.py
ui/: calculation_trace.py  components.py  metrics_helpers.py  metrics_view.py  model_labels.py  protocol_view.py  streamlit_app.py  styles.py  ui_models.py
