[project]
name = "secure-ml-inference"
version = "0.1.0"
description = "Confidential ML inference prototype using Paillier HE"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Danielle Nova", email = "novosel.dan@gmail.com"}
]
keywords = ["confidential-ml", "phe", "paillier", "logistic-regression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "phe",
    "fastapi",
    "uvicorn",
    "streamlit",
    "requests",
    "pydantic",
    "joblib",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[tool.setuptools.packages.find]
include = ["app", "api", "ui", "experiments"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ── Ruff (linter + formatter) ─────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
fix = true
unsafe-fixes = false
indent-width = 4

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle (ошибки и предупреждения)
    "F",         # Pyflakes (неиспользуемые переменные, импорты и т.п.)
    "I",         # isort (порядок импортов)
    "N",         # pep8-naming (стиль имён)
    "UP",        # pyupgrade (синтаксис новых версий Python)
    "B",         # flake8-bugbear (потенциальные баги)
    "SIM",       # flake8-simplify (упрощение конструкций)
    "C4",        # flake8-comprehensions (проверка comprehensions)
    "TCH",       # flake8-type-checking (правильные импорты для аннотаций)
    "PTH",       # flake8-use-pathlib (использовать pathlib вместо os.path)
    "RUF",       # специфичные для Ruff правила
]
ignore = [
    "E501",     # длина строки контролируется форматом
    "S101",     # assert (разрешены в экспериментах)
    "N806"      # Переменные в функции должны быть в стиле lowercase
]
exclude = [
    "venv",
    ".git",
    "__pycache__",
    "results",
    "notebooks",
]

[tool.ruff.lint.isort]
known-first-party = ["app", "api", "ui", "experiments"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ── mypy (статическая проверка типов) ──────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true      # пропускать библиотеки без stub-файлов
exclude = [
    "experiments/",
    "results/",
    "notebooks/",
    "venv/",
]

# ── pytest ─────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
]